fix: remove unnecessary header class and adjust h1 margin for better alignment

--- a/colors/index.css
+++ b/colors/index.css
@@ -45,19 +45,11 @@ h1 {
     text-align: center;
     font-size: 55px;
     text-shadow: 1px 1px #771b2c;
-    margin-left: 33%;
 }
 
 p {
     font-weight: bold;
     color: #771b2c;
-}
-
-.header {
-
-    display: flex;
-    flex-direction: row;
-
 }
 
 .menu-img {
